# Clean-Architecture-FastAPI-Template-with-Async-and-JWT-Auth

./: .gitignore  Dockerfile  Dockerfile.dev  compose.yaml  dev.env  entrypoint.sh  pyproject.toml  tenants.json  token.txt
.github/workflows/: develop.yaml  master-deploy.yaml
app/: main.py
app/core/: database.py  dependencies.py  exceptions.py  security.py  settings.py
app/models/: __init__.py  api2.py  api_models.py  models_enums.py
app/repository/: __init__.py  base_repository.py  database_repository.py  history_repository.py  role_repository.py  tenant_repository.py  user_repository.py  user_role_repostory.py  user_tenant_repository.py
app/routes/: __init__.py  health_route.py
app/routes/v1/: __init__.py  auth_routes.py  database_route.py  history_route.py  role_route.py  tenant_route.py  user_role_route.py  user_tenant_route.py  users_routes.py
app/schemas/: auth_schema.py  base_schema.py  database_schema.py  history_schema.py  role_schema.py  tenant_schema.py  user_role_schema.py  user_schema.py  user_tenant_schema.py
app/services/: __init__.py  auth_service.py  base_service.py  database_service.py  history_service.py  role_service.py  tenant_service.py  user_role_service.py  user_service.py  user_tenant_service.py
k8s/: auth-deploy.yaml  configmap.yaml  default-headers.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
migrations/: env.py
migrations/versions/: 2b1d105330e4_adding_user_model.py  f702703b181a_adding_the_tenant_model_schema_migration.py  fa6c105ff4f5_adding_the_roles_model_schema_migration.py  fb41d5a1229e_adding_the_database_model_schema_.py  fba5c39d10e5_adding_user_roles_association_table.py  fd4c995e4555_adding_the_database_history_model_.py  ga5ee5a5b0fc_adding_usertenant_association.py
tests/: conftest.py  factories.py  helpers.py
tests/core/: test_security.py
tests/routes/v1/: test_auth_route.py  test_database_route.py  test_ping_route.py  test_role_route.py  test_tenant_route.py  test_user_route.py
